[gd_scene load_steps=12 format=4 uid="uid://cpes3uxvv16ho"]

[ext_resource type="Script" path="res://scripts/cliff_side.gd" id="1_4a368"]
[ext_resource type="Texture2D" uid="uid://ddow4hur5ynug" path="res://art/tilesets/plains.png" id="1_t70qj"]
[ext_resource type="Texture2D" uid="uid://cga7rhb3idiw4" path="res://art/tilesets/grass.png" id="2_ysiy1"]
[ext_resource type="Texture2D" uid="uid://b10i68ix1veac" path="res://art/objects/objects.png" id="3_qonxc"]
[ext_resource type="PackedScene" uid="uid://b3dawxq0hbl56" path="res://scenes/player.tscn" id="5_h7acn"]
[ext_resource type="TileSet" uid="uid://datrmgsnhvev0" path="res://assets/tilemaps.tres" id="5_wwgli"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_21vpu"]
texture = ExtResource("1_t70qj")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
1:1/0 = 0
1:1/0/y_sort_origin = 4
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2b36n"]
texture = ExtResource("2_ysiy1")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cqr31"]
texture = ExtResource("3_qonxc")
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 4
0:4/0 = 0
0:3/0 = 0
0:2/0 = 0
0:1/0 = 0
0:1/0/y_sort_origin = 4
0:0/0 = 0
0:0/0/y_sort_origin = 4
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_d3kek"]
sources/0 = SubResource("TileSetAtlasSource_21vpu")
sources/1 = SubResource("TileSetAtlasSource_2b36n")
sources/2 = SubResource("TileSetAtlasSource_cqr31")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojqbo"]
size = Vector2(38, 21)

[node name="cliff_side" type="Node2D"]
script = ExtResource("1_4a368")

[node name="Map" type="Node2D" parent="."]

[node name="ground" type="TileMapLayer" parent="Map"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAXAAAAAAACAAUAAAAWAAAAAAACAAUAAAAVAAAAAAACAAUAAAAUAAAAAAACAAUAAAATAAAAAAACAAUAAAASAAAAAAACAAUAAAARAAAAAAACAAUAAAAQAAAAAAACAAUAAAAPAAAAAAACAAUAAAAOAAAAAAACAAUAAAANAAAAAAACAAUAAAAMAAAAAAACAAUAAAALAAAAAAACAAUAAAAKAAAAAAACAAUAAAAJAAAAAAACAAUAAAAIAAAAAAACAAUAAAAHAAAAAAACAAUAAAAGAAAAAAACAAUAAAAFAAAAAAACAAUAAAAEAAAAAAACAAUAAAADAAEAAAACAAUAAAAEAAEAAAACAAUAAAAFAAEAAAACAAUAAAAGAAEAAAACAAUAAAAHAAEAAAACAAUAAAAIAAEAAAACAAUAAAAJAAEAAAACAAUAAAAKAAEAAAACAAUAAAALAAEAAAACAAUAAAAMAAEAAAACAAUAAAANAAEAAAACAAUAAAAOAAEAAAACAAUAAAAPAAEAAAACAAUAAAAQAAEAAAACAAUAAAARAAEAAAACAAUAAAASAAEAAAACAAUAAAATAAEAAAACAAUAAAAUAAEAAAACAAUAAAAVAAEAAAACAAUAAAAWAAEAAAACAAUAAAAXAAEAAAACAAUAAAAXAAwAAAACAAUAAAAWAAwAAAACAAUAAAAVAAwAAAACAAUAAAAUAAwAAAACAAUAAAATAAwAAAACAAUAAAASAAwAAAACAAUAAAARAAwAAAACAAUAAAAQAAwAAAACAAUAAAAPAAwAAAACAAUAAAAOAAwAAAACAAUAAAANAAwAAAACAAUAAAAMAAwAAAACAAUAAAALAAwAAAACAAUAAAAKAAwAAAACAAUAAAAJAAwAAAACAAUAAAAIAAwAAAADAAEAAAAHAAwAAAACAAEAAAAGAAwAAAABAAEAAAAFAAwAAAACAAUAAAAEAAwAAAACAAUAAAADAAsAAAACAAUAAAADAAwAAAACAAUAAAADAAoAAAACAAUAAAADAAkAAAABAAIAAAADAAgAAAABAAEAAAADAAIAAAACAAUAAAADAAMAAAABAAAAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAADAAYAAAABAAEAAAADAAcAAAABAAEAAAAEAAgAAAACAAEAAAAEAAkAAAACAAIAAAAEAAoAAAACAAUAAAAEAAsAAAACAAUAAAAFAAsAAAACAAUAAAAGAAsAAAABAAEAAAAHAAsAAAACAAEAAAAIAAsAAAADAAEAAAAJAAsAAAACAAUAAAAKAAsAAAACAAUAAAALAAsAAAACAAUAAAAMAAsAAAACAAUAAAANAAsAAAACAAUAAAAOAAsAAAACAAUAAAAPAAsAAAACAAUAAAAQAAsAAAACAAUAAAARAAsAAAACAAUAAAASAAsAAAACAAUAAAATAAsAAAACAAUAAAAUAAsAAAACAAUAAAAVAAsAAAACAAUAAAAWAAsAAAACAAUAAAAXAAsAAAACAAUAAAAXAAIAAAACAAUAAAAWAAIAAAACAAUAAAAVAAIAAAACAAUAAAAUAAIAAAACAAUAAAATAAIAAAACAAUAAAASAAIAAAACAAUAAAARAAIAAAACAAUAAAAQAAIAAAACAAUAAAAPAAIAAAACAAUAAAAOAAIAAAACAAUAAAANAAIAAAACAAUAAAAMAAIAAAACAAUAAAALAAIAAAACAAUAAAAKAAIAAAACAAUAAAAJAAIAAAACAAUAAAAIAAIAAAACAAUAAAAHAAIAAAACAAUAAAAGAAIAAAACAAUAAAAFAAIAAAACAAUAAAAEAAIAAAACAAUAAAAEAAMAAAACAAAAAAAFAAMAAAADAAAAAAAGAAMAAAACAAUAAAAHAAMAAAACAAUAAAAIAAMAAAACAAUAAAAJAAMAAAACAAUAAAAKAAMAAAABAAAAAAALAAMAAAACAAAAAAAMAAMAAAACAAAAAAANAAMAAAACAAAAAAAOAAMAAAACAAAAAAAPAAMAAAADAAAAAAAQAAMAAAACAAUAAAARAAMAAAACAAUAAAASAAMAAAACAAUAAAATAAMAAAACAAUAAAAUAAMAAAACAAUAAAAVAAMAAAACAAUAAAAWAAMAAAACAAUAAAAXAAMAAAACAAUAAAAXAAQAAAACAAUAAAAWAAQAAAACAAUAAAAVAAQAAAACAAUAAAAUAAQAAAACAAUAAAATAAQAAAACAAUAAAASAAQAAAACAAUAAAARAAQAAAACAAUAAAAQAAQAAAACAAUAAAAPAAQAAAADAAEAAAAOAAQAAAACAAEAAAANAAQAAAACAAEAAAAMAAQAAAACAAEAAAALAAQAAAACAAEAAAAKAAQAAAABAAEAAAAJAAQAAAACAAUAAAAIAAQAAAACAAUAAAAHAAQAAAACAAUAAAAGAAQAAAACAAUAAAAFAAQAAAADAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAFAAUAAAADAAEAAAAGAAUAAAACAAUAAAAHAAUAAAACAAUAAAAIAAUAAAACAAUAAAAJAAUAAAACAAUAAAAKAAUAAAABAAEAAAALAAUAAAACAAEAAAAMAAUAAAACAAEAAAANAAUAAAACAAEAAAAOAAUAAAACAAEAAAAPAAUAAAADAAEAAAAQAAUAAAACAAUAAAARAAUAAAACAAUAAAASAAUAAAACAAUAAAATAAUAAAACAAUAAAAUAAUAAAACAAUAAAAVAAUAAAACAAUAAAAWAAUAAAACAAUAAAAXAAUAAAACAAUAAAAXAAYAAAACAAUAAAAWAAYAAAACAAUAAAAVAAYAAAACAAUAAAAUAAYAAAACAAUAAAATAAYAAAACAAUAAAASAAYAAAACAAUAAAARAAYAAAACAAUAAAAQAAYAAAADAAAAAAAPAAYAAAAEAAEAAAAOAAYAAAACAAEAAAANAAYAAAACAAEAAAAMAAYAAAACAAEAAAALAAYAAAACAAEAAAAKAAYAAAABAAEAAAAJAAYAAAACAAUAAAAIAAYAAAACAAUAAAAHAAYAAAACAAUAAAAGAAYAAAACAAUAAAAFAAYAAAADAAEAAAAEAAYAAAACAAEAAAAEAAcAAAACAAEAAAAFAAcAAAAEAAEAAAAGAAcAAAACAAAAAAAHAAcAAAACAAAAAAAIAAcAAAACAAAAAAAJAAcAAAACAAAAAAAKAAcAAAAFAAEAAAALAAcAAAAEAAAAAAAMAAcAAAACAAIAAAANAAcAAAAFAAAAAAAOAAcAAAACAAEAAAAPAAcAAAACAAEAAAAQAAcAAAAEAAEAAAARAAcAAAACAAAAAAASAAcAAAACAAAAAAATAAcAAAACAAAAAAAUAAcAAAACAAAAAAAVAAcAAAADAAAAAAAWAAcAAAACAAUAAAAXAAcAAAACAAUAAAAXAAgAAAACAAUAAAAWAAgAAAACAAUAAAAVAAgAAAADAAEAAAAUAAgAAAACAAEAAAATAAgAAAACAAEAAAASAAgAAAACAAEAAAARAAgAAAACAAEAAAAQAAgAAAACAAEAAAAPAAgAAAACAAEAAAAOAAgAAAAFAAAAAAANAAgAAAABAAIAAAAMAAgAAAACAAUAAAALAAgAAAADAAIAAAAKAAgAAAAEAAAAAAAJAAgAAAACAAEAAAAIAAgAAAACAAEAAAAHAAgAAAACAAEAAAAGAAgAAAACAAEAAAAFAAgAAAACAAEAAAAFAAkAAAACAAIAAAAGAAkAAAAFAAAAAAAGAAoAAAABAAEAAAAHAAoAAAACAAEAAAAIAAoAAAADAAEAAAAJAAoAAAACAAUAAAAKAAoAAAACAAUAAAALAAoAAAACAAUAAAAMAAoAAAACAAUAAAANAAoAAAACAAUAAAAOAAoAAAACAAUAAAAPAAoAAAACAAUAAAAQAAoAAAACAAUAAAARAAoAAAACAAUAAAASAAoAAAACAAUAAAATAAoAAAACAAUAAAAUAAoAAAACAAUAAAAVAAoAAAACAAUAAAAWAAoAAAACAAUAAAAXAAoAAAACAAUAAAAXAAkAAAACAAUAAAAWAAkAAAACAAUAAAAVAAkAAAADAAIAAAAUAAkAAAACAAIAAAATAAkAAAACAAIAAAASAAkAAAACAAIAAAARAAkAAAACAAIAAAAQAAkAAAACAAIAAAAPAAkAAAACAAIAAAAOAAkAAAABAAIAAAANAAkAAAACAAUAAAAMAAkAAAACAAUAAAALAAkAAAACAAUAAAAKAAkAAAADAAIAAAAJAAkAAAACAAIAAAAIAAkAAAAEAAAAAAAHAAkAAAACAAEAAAAFAAoAAAACAAUAAAADAA0AAAACAAUAAAAEAA0AAAACAAUAAAAFAA0AAAACAAUAAAAGAA0AAAABAAEAAAAHAA0AAAACAAEAAAAIAA0AAAADAAEAAAAJAA0AAAACAAUAAAAKAA0AAAACAAUAAAALAA0AAAACAAUAAAAMAA0AAAACAAUAAAANAA0AAAACAAUAAAAOAA0AAAACAAUAAAAPAA0AAAACAAUAAAAQAA0AAAACAAUAAAARAA0AAAACAAUAAAASAA0AAAACAAUAAAATAA0AAAACAAUAAAAUAA0AAAACAAUAAAAVAA0AAAACAAUAAAAWAA0AAAACAAUAAAAXAA0AAAACAAUAAAAAAAAAAAACAAUAAAABAAAAAAACAAUAAAACAAAAAAACAAUAAAADAAAAAAACAAUAAAAAAAEAAAACAAUAAAAAAAIAAAACAAUAAAAAAAMAAAACAAUAAAAAAAQAAAACAAUAAAAAAAUAAAACAAUAAAAAAAYAAAACAAUAAAAAAAcAAAACAAUAAAAAAAgAAAACAAUAAAAAAAkAAAACAAUAAAAAAAoAAAACAAUAAAAAAAsAAAACAAUAAAAAAAwAAAACAAUAAAAAAA0AAAACAAUAAAAAAA4AAAACAAUAAAAAAA8AAAACAAUAAAAAABAAAAACAAUAAAAAABEAAAACAAUAAAABABEAAAACAAUAAAACABEAAAACAAUAAAADABEAAAACAAUAAAADABAAAAACAAUAAAACAA8AAAACAAUAAAACAA4AAAACAAUAAAACAA0AAAACAAUAAAACAAwAAAACAAUAAAACAAsAAAACAAUAAAACAAoAAAACAAUAAAACAAkAAAACAAUAAAACAAgAAAACAAUAAAACAAcAAAACAAUAAAACAAYAAAACAAUAAAACAAUAAAACAAUAAAACAAQAAAACAAUAAAACAAMAAAACAAUAAAACAAIAAAACAAUAAAACAAEAAAACAAUAAAABAAEAAAACAAUAAAABAAIAAAACAAUAAAABAAMAAAACAAUAAAABAAQAAAACAAUAAAABAAUAAAACAAUAAAABAAYAAAACAAUAAAABAAcAAAACAAUAAAABAAgAAAACAAUAAAABAAkAAAACAAUAAAABAAoAAAACAAUAAAABAAsAAAACAAUAAAABAAwAAAACAAUAAAABAA0AAAACAAUAAAABAA4AAAACAAUAAAABAA8AAAACAAUAAAABABAAAAACAAUAAAACABAAAAACAAUAAAAEABAAAAACAAUAAAAFABAAAAACAAUAAAAGABAAAAACAAUAAAAHABAAAAACAAUAAAAIABAAAAACAAUAAAAJABAAAAACAAUAAAAKABAAAAACAAUAAAALABAAAAACAAUAAAAMABAAAAACAAUAAAANABAAAAACAAUAAAAOABAAAAACAAUAAAAPABAAAAACAAUAAAAQABAAAAACAAUAAAARABAAAAACAAUAAAASABAAAAACAAUAAAATABAAAAACAAUAAAAUABAAAAACAAUAAAAVABAAAAACAAUAAAAWABAAAAACAAUAAAAXABAAAAACAAUAAAAXAA8AAAACAAUAAAAXAA4AAAACAAUAAAAWAA4AAAACAAUAAAAWAA8AAAACAAUAAAAVAA8AAAACAAUAAAAUAA8AAAACAAUAAAATAA8AAAACAAUAAAASAA8AAAACAAUAAAARAA8AAAACAAUAAAAQAA8AAAACAAUAAAAPAA8AAAACAAUAAAAOAA8AAAACAAUAAAANAA8AAAACAAUAAAAMAA8AAAACAAUAAAALAA8AAAACAAUAAAAKAA8AAAACAAUAAAAJAA8AAAACAAUAAAAIAA8AAAADAAIAAAAHAA8AAAACAAIAAAAGAA4AAAABAAEAAAAFAA4AAAACAAUAAAAEAA4AAAACAAUAAAADAA4AAAACAAUAAAADAA8AAAACAAUAAAAEAA8AAAACAAUAAAAFAA8AAAACAAUAAAAGAA8AAAABAAIAAAAHAA4AAAACAAEAAAAIAA4AAAADAAEAAAAJAA4AAAACAAUAAAAKAA4AAAACAAUAAAALAA4AAAACAAUAAAAMAA4AAAACAAUAAAANAA4AAAACAAUAAAAOAA4AAAACAAUAAAAPAA4AAAACAAUAAAAQAA4AAAACAAUAAAARAA4AAAACAAUAAAASAA4AAAACAAUAAAATAA4AAAACAAUAAAAUAA4AAAACAAUAAAAVAA4AAAACAAUAAAAEABEAAAACAAUAAAAFABEAAAACAAUAAAAGABEAAAACAAUAAAAHABEAAAACAAUAAAAIABEAAAACAAUAAAAJABEAAAACAAUAAAAKABEAAAACAAUAAAALABEAAAACAAUAAAAMABEAAAACAAUAAAANABEAAAACAAUAAAAOABEAAAACAAUAAAAPABEAAAACAAUAAAAQABEAAAACAAUAAAARABEAAAACAAUAAAASABEAAAACAAUAAAATABEAAAACAAUAAAAUABEAAAACAAUAAAAVABEAAAACAAUAAAAWABEAAAACAAUAAAAXABEAAAACAAUAAAAXABIAAAACAAUAAAAXABMAAAACAAUAAAAWABMAAAACAAUAAAAVABMAAAACAAUAAAAUABMAAAACAAUAAAATABMAAAACAAUAAAASABMAAAACAAUAAAARABMAAAACAAUAAAAQABMAAAACAAUAAAAPABMAAAACAAUAAAAOABMAAAACAAUAAAANABMAAAACAAUAAAAMABMAAAACAAUAAAALABMAAAACAAUAAAAKABMAAAACAAUAAAAJABMAAAACAAUAAAAIABMAAAACAAUAAAAHABMAAAACAAUAAAAGABMAAAACAAUAAAAFABMAAAACAAUAAAAEABMAAAACAAUAAAADABMAAAACAAUAAAACABMAAAACAAUAAAABABMAAAACAAUAAAAAABMAAAACAAUAAAAAABIAAAACAAUAAAABABIAAAACAAUAAAACABIAAAACAAUAAAADABIAAAACAAUAAAAEABIAAAACAAUAAAAFABIAAAACAAUAAAAGABIAAAACAAUAAAAHABIAAAACAAUAAAAIABIAAAACAAUAAAAJABIAAAACAAUAAAAKABIAAAACAAUAAAALABIAAAACAAUAAAAMABIAAAACAAUAAAANABIAAAACAAUAAAAOABIAAAACAAUAAAAPABIAAAACAAUAAAAQABIAAAACAAUAAAARABIAAAACAAUAAAASABIAAAACAAUAAAATABIAAAACAAUAAAAUABIAAAACAAUAAAAVABIAAAACAAUAAAAWABIAAAACAAUAAAA=")
tile_set = SubResource("TileSet_d3kek")

[node name="trees" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAADAAwAAgAAAAUAAAAHAAUAAgAIAAYAAAAMAAcAAgAIAAYAAAACAAMAAgAGAAcAAAASAAMAAgAGAAcAAAASAAsAAgAGAAcAAAAJAAsAAgAKAAcAAAAOAAsAAgAKAAcAAAABAAQAAgAKAAcAAAAUAAQAAgAKAAcAAAAWAAQAAgAKAAcAAAAJAA4AAgAAAAAAAAAWAAcAAgAFAAAAAAAHAAMAAgAFAAAAAAABAAcAAgAFAAAAAAACAAkAAgAAAAEAAAAJAAIAAgAAAAEAAAAMAAoAAgAAAAEAAAAVAAoAAgAAAAEAAAARAAUAAgAAAAEAAAA=")
tile_set = ExtResource("5_wwgli")

[node name="collissions" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collissions"]
polygon = PackedVector2Array(50, 54, 91, 53, 93, 113, 163, 114, 163, 51, 253, 51, 253, 96, 268, 100, 268, 115, 348, 115, 349, 154, 232, 158, 226, 140, 213, 139, 209, 124, 189, 122, 187, 137, 175, 138, 171, 155, 141, 156, 141, 251, 99, 254, 99, 158, 53, 158, 43, 42, -28, 177, -30, 302, 35, 333, 190, 331, 334, 331, 423, 324, 476, 187, 475, 57, 453, -22, 368, -49, 238, -57, 121, -55, 55, -45, 44, -18, 21, 44, 54, 32)

[node name="Player" parent="." instance=ExtResource("5_h7acn")]
position = Vector2(119, 209)

[node name="cliff_side_exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cliff_side_exit"]
position = Vector2(120, 231)
shape = SubResource("RectangleShape2D_ojqbo")

[connection signal="body_entered" from="cliff_side_exit" to="." method="_on_cliff_side_exit_body_entered"]
[connection signal="body_exited" from="cliff_side_exit" to="." method="_on_cliff_side_exit_body_exited"]
